samples/_failures_safe/1761625463_cd98eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ba4833a.c: In function ‘main’:
./samples/SAFE/__tmp_2ba4833a.c:166:16: error: missing terminating " character
  166 |         printf("No input provided
      |                ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2ba4833a.c:166:9: error: expected expression at end of input
  166 |         printf("No input provided
      |         ^~~~~~
./samples/SAFE/__tmp_2ba4833a.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2ba4833a.c:166:9: error: expected declaration or statement at end of input
